# c-compiler

./: .gitignore  .hlint.yaml  compiler.cabal  design.md  flake.nix  info.info
app/: Main.hs
src/: Main.hs
src/Compiler/: AST.hs  Parser.hs  SymbolTable.hs  Types.hs  Validation.hs
src/Compiler/Parser/: Grammar.hs  Grammar.y  GrammarHelpers.hs  Lexer.x  Monad.hs  ParseTree.hs  ParserState.hs  Preprocessor.hs  Preprocessor.y  PreprocessorGrammar.y  Span.hs  SrcLoc.hs  TokenParsers.hs  Tokens.hs
tests/: Test.hs
