cabal-version:      2.4
name:               compiler
version:            0.1.0.0
license:            MIT
copyright:          2024  Trent Turner
--maintainer:         
author:             Trent Turner
--category:           
--homepage:           

-- TODO: Before hackage release.
-- A short (one-line) description of the package.
synopsis:           A Simple C Compiler

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

extra-source-files:
  LICENSE
  README.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  mixins:
    --base hiding (Prelude),
    --relude (Relude as Prelude, Relude.Container.One),
    --relude

  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NoStarIsType
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns
    LinearTypes

  build-depends:
    , base          >=4.13.0.0 && <4.19.0.0.0
    , bytestring
    , text
    , linear-base
    , random
    , vector
    , parsec
    , containers
    , mtl
    , transformers
    , array

    --, happy
    --, happy  >= 1.20.1.1    
    --, alex 

    --, aeson
    --, async
    --, base          >=4.13.0.0 && <4.18.0.0.0
    --, data-default
    --, directory
    --, filepath
    --, optics-core
    --, profunctors
    --, relude        >=1.0
    --, shower
    --, time
    , with-utf8

  hs-source-dirs:     src
  default-language:   Haskell2010

executable compiler
  import:  shared
  main-is: Main.hs
  --exposed-modules:
  other-modules:
    --Compiler.Parser.Span
    Compiler.Parser.Tokens
    Compiler.Parser.ParseTree
    Compiler.Parser.Monad
    Compiler.Parser.Lexer
    Compiler.Parser.Grammar
    Compiler.AST
