cabal-version:      2.4
name:               compiler
version:            0.1.0.0
license:            MIT
copyright:          2024  Trent Turner
-- maintainer:         
author:             Trent Turner
-- category:           
-- homepage:           

-- TODO: Before hackage release.
-- A short (one-line) description of the package.
synopsis:           A Simple C Compiler

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

extra-source-files:
  LICENSE
  README.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds
    -fplugin=Effectful.Plugin
    -- -fspecialise-aggressively -fexpose-all-unfoldings


  mixins:
    --base hiding (Prelude),
    --relude (Relude as Prelude, Relude.Container.One),
    --relude

  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NoStarIsType
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns
    LinearTypes

  build-depends:
    , base          >=4.13.0.0 && <4.19.0.0.0
    , bytestring
    , text
    , linear-base
    , random
    , vector
    , parsec
    , containers
    , conduit
    , mtl
    , transformers
    , array
    , effectful
    , effectful-core
    , effectful-plugin

    --, happy
    --, happy  >= 1.20.1.1    
    --, alex 

    --, aeson
    --, async
    --, base          >=4.13.0.0 && <4.18.0.0.0
    --, data-default
    --, directory
    --, filepath
    --, optics-core
    --, profunctors
    --, relude        >=1.0
    --, shower
    --, time
    , with-utf8

  default-language:   Haskell2010


library compiler-lib
  import: shared
  exposed-modules:
    --Compiler.Parser.Span
    Compiler.Parser.Tokens
    Compiler.Parser.ParseTree
    Compiler.Parser.Preprocessor
    Compiler.Parser.PreprocessorGrammar
    Compiler.Parser.ParserState
    Compiler.Parser.Lexer
    Compiler.Parser.TokenParsers
    Compiler.Parser.Grammar
    Compiler.Parser.GrammarHelpers
    Compiler.Parser
    Compiler.SymbolTable
    Compiler.AST
    Compiler.Types
  hs-source-dirs:     src

executable compiler
  import:  shared
  build-depends: compiler-lib
  main-is: Main.hs
  hs-source-dirs: app
  --exposed-modules:
  --other-modules:

test-suite tests
  import: shared
  type: exitcode-stdio-1.0
  main-is: Test.hs
  build-depends: HUnit, QuickCheck, compiler-lib
  hs-source-dirs: tests
